--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <header>
-
+    <link rel="stylesheet" href="Styling.css">
 </header>
 
 <body>
-    Hello World
+    <div class="TopHeading">William Sigee Portfolio</div>
+    <div class = "NavBar">
+        <div class = "NavBarButton">
+            <button></button>
+        </div>
+    </div>
+    <div class = "Content">
+        Hello this is my website
+    </div>
 </body>
