--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <div class="TopHeading">William Sigee Portfolio</div>
     <div class = "NavBar">
         <div class = "NavBarButton">
-            <button></button>
+            <button>Button 1</button>
+        </div>
+        <div class = "NavBarButton">
+            <button>Button 2</button>
+        </div>
+        <div class = "NavBarButton">
+            <button>Button 3</button>
         </div>
     </div>
     <div class = "Content">
