Gave buttons (possible) labels

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div class="TopHeading">William Sigee Portfolio</div>
     <div class = "NavBar">
         <div class = "NavBarButton">
-            <button onclick="RedirectFunction('Button1.html')"> Button 1 </button>
+            <button onclick="RedirectFunction('index.html')"> Landing Page </button>
         </div>
         <div class = "NavBarButton">
             <button onclick="RedirectFunction('Button2.html')"> 
-                Button 2
+                Web Projects
             </button>
         </div>       
         <div class = "NavBarButton">
-            <button onclick="RedirectFunction('Button3.html')"> Button 3 </button>
+            <button onclick="RedirectFunction('Button3.html')"> Other Projects/ Experience </button>
         </div>
     </div>
     <div class = "Content">
