Added a title and the banner contect

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="Styling.css">
+    <title>WillSigee- Landing Page</title>
     <script>
         function RedirectFunction(a){
             window.location.href = a
@@ -21,6 +22,10 @@
         <div class = "NavBarButton">
             <button onclick="RedirectFunction('Button3.html')"> Other Projects/ Experience </button>
         </div>
+    </div>
+    <div class = "banner" style = "background-image:url(Sample\ Banner.png)"> 
+        <!-- Note you need to change background image manually for each page to allow modularity -->
+        Landing Page
     </div>
     <div class = "Content">
         Hello this is my website
