--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
         Landing Page
     </div>
     <div class = "Content">
-        Hello this is my website
+        Welcome to my Github hosted webpage! By clicking the above images, you will be able to view my projects and you will be able to find some demos/ discussion around each project.<br>
+        Dont hesitate to enquire if you have any questions, my contact details can be found below:
+    </div>
+
+
+    <div class = "Footer">
+        <div class = "Footer-Column">
+            wasd
+        </div>
+        <div class = "Footer-Column">
+            wasd
+        </div>
+        <div class = "Footer-Column">
+            wasd
+        </div>
     </div>
 </body>
