--- a/index.html
+++ b/index.html
@@ -23,22 +23,29 @@
             <button onclick="RedirectFunction('Button3.html')"> Other Projects/ Experience </button>
         </div>
     </div>
-    <div class = "banner" style = "background-image:url(Sample\ Banner.png)"> 
+    <div class = "banner" style = "background-image:url(Image/Sample\ Banner.png)"> 
         <!-- Note you need to change background image manually for each page to allow modularity -->
         Landing Page
     </div>
     <div class = "Content">
-        Welcome to my Github hosted webpage! By clicking the above images, you will be able to view my projects and you will be able to find some demos/ discussion around each project.<br>
+        <p>
+        Welcome to my Github hosted webpage! By clicking the above images, you will be able to view my projects and you will be able to find some demos/ discussion around each project.
+        </p>
+        <p>
         Dont hesitate to enquire if you have any questions, my contact details can be found below:
+        </p>
     </div>
 
 
     <div class = "Footer">
         <div class = "Footer-Column">
-            wasd
+            Contact me!<br><br>
+            Will.Sigee@gmail.com<br>
+            (+44) 07535446372<br>
         </div>
         <div class = "Footer-Column">
-            wasd
+            <a href="https://www.linkedin.com/in/william-sigee-03089b261/"><img src = "Images/LinkedIn_In_logo.png" style = "width:5%;"></a>
+            <a href="https://github.com/Will1802"><img src = "Images/github-mark-white.png" style = "width:5%;"></a>
         </div>
         <div class = "Footer-Column">
             wasd
