Fixed github logo and changed the footer format

--- a/index.html
+++ b/index.html
@@ -38,17 +38,22 @@
 
 
     <div class = "Footer">
-        <div class = "Footer-Column">
-            Contact me!<br><br>
-            Will.Sigee@gmail.com<br>
-            (+44) 07535446372<br>
+        <div style = "text-align: center; font-weight: bold;font-size: large;">
+            Contact Me
         </div>
-        <div class = "Footer-Column">
-            <a href="https://www.linkedin.com/in/william-sigee-03089b261/"><img src = "Images/LinkedIn_In_logo.png" style = "width:5%;"></a>
-            <a href="https://github.com/Will1802"><img src = "Images/github-mark-white.png" style = "width:5%;"></a>
-        </div>
-        <div class = "Footer-Column">
-            wasd
+        <div class = "Footer-Column-Container">
+            <div class = "Footer-Column">
+                Will.Sigee@gmail.com<br>
+                (+44) 07535446372<br>
+            </div>
+            <div class = "Footer-Column">
+                <a href="https://www.linkedin.com/in/william-sigee-03089b261/"><img src = "Images/LinkedIn_In_logo.png" style = "width:5%;"></a>
+                <br><br>
+                <a href="https://github.com/Will1802"><img src = "Images/github-mark.png" style = "width:5%;"></a>
+            </div>
+            <div class = "Footer-Column">
+                wasd
+            </div>
         </div>
     </div>
 </body>
