--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         Welcome to my Github hosted webpage! By clicking the above images, you will be able to view my projects and you will be able to find some demos/ discussion around each project.
         </p>
         <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis corporis, possimus eveniet accusamus delectus deserunt obcaecati saepe dolor ipsam, ex repellat velit optio dolores. Modi iure nesciunt adipisci excepturi earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, incidunt? Fugit, impedit sunt minus laborum porro officia incidunt corrupti! Facilis excepturi nihil in consequuntur adipisci quis dolore iusto accusamus itaque.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem error illum magnam, aliquam alias, odit facere voluptatum libero impedit beatae hic molestias dolor. Aut, beatae cumque accusantium unde repudiandae dolores! Lorem ipsum, dolor sit amet consectetur adipisicing elit. A quod corporis minima voluptas incidunt perspiciatis deleniti! Dolores illum sapiente culpa illo, ex voluptate qui consequuntur esse vero? Quod, molestias amet.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, nulla nostrum sunt magnam consectetur ex placeat tempore, architecto quia porro mollitia quam delectus odio perspiciatis ea tenetur fugiat praesentium voluptatum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate aspernatur reiciendis ducimus quam non neque illum deserunt mollitia ipsam fugiat, quas a fugit! Porro eum libero debitis suscipit ducimus asperiores.
+        </p>
+        <p>
         Dont hesitate to enquire if you have any questions, my contact details can be found below:
         </p>
     </div>
