Fixed banner relative path

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <button onclick="RedirectFunction('Button3.html')"> Other Projects/ Experience </button>
         </div>
     </div>
-    <div class = "banner" style = "background-image:url(Image/Sample\ Banner.png)"> 
+    <div class = "banner" style = "background-image:url(Images/Sample\ Banner.png)"> 
         <!-- Note you need to change background image manually for each page to allow modularity -->
         Landing Page
+        
     </div>
     <div class = "Content">
         <p>
