Polished off the footer with a back to top button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button onclick="RedirectFunction('Button3.html')"> Other Projects/ Experience </button>
         </div>
     </div>
-    <div class = "banner" style = "background-image:url(Images/Sample\ Banner.png)"> 
+    <div class = "banner" style = "background-image:url(Images/Sample\ Banner.png); color:white;"> 
         <!-- Note you need to change background image manually for each page to allow modularity -->
         Landing Page
         
@@ -62,7 +62,7 @@
                 <a href="https://github.com/Will1802"><img src = "Images/github-mark.png" style = "width:5%;"></a>
             </div>
             <div class = "Footer-Column">
-                wasd
+                <a href = "#top">Back to Top</a>
             </div>
         </div>
     </div>
