Made basic idea for two sided section

--- a/OtherExperience.html
+++ b/OtherExperience.html
@@ -25,7 +25,7 @@
     </div>
     <div class = "banner" style = "background-image:url(Images/Sample\ Banner.png); color:white;"> 
         <!-- Note you need to change background image manually for each page to allow modularity -->
-        Landing Page
+        Other Experience
         
     </div>
     <div class = "Content">
