--- a/WebProjects.html
+++ b/WebProjects.html
@@ -25,7 +25,7 @@
     </div>
     <div class = "banner" style = "background-image:url(Images/Sample\ Banner.png); color:white;"> 
         <!-- Note you need to change background image manually for each page to allow modularity -->
-        Landing Page
+        Web Projects
         
     </div>
     <div class = "Content">
@@ -44,6 +44,15 @@
         <p>
         Dont hesitate to enquire if you have any questions, my contact details can be found below:
         </p>
+        <div class = "TwoSidesContainer">
+            <div class = "OneOfTwoSides">
+                wasd
+            </div>
+            <div class = "OneOfTwoSides">
+                wasd
+            </div>
+
+        </div>
     </div>
 
 
