--- a/WebProjects.html
+++ b/WebProjects.html
@@ -32,27 +32,52 @@
         <p>
         Welcome to my Github hosted webpage! By clicking the above images, you will be able to view my projects and you will be able to find some demos/ discussion around each project.
         </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis corporis, possimus eveniet accusamus delectus deserunt obcaecati saepe dolor ipsam, ex repellat velit optio dolores. Modi iure nesciunt adipisci excepturi earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, incidunt? Fugit, impedit sunt minus laborum porro officia incidunt corrupti! Facilis excepturi nihil in consequuntur adipisci quis dolore iusto accusamus itaque.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem error illum magnam, aliquam alias, odit facere voluptatum libero impedit beatae hic molestias dolor. Aut, beatae cumque accusantium unde repudiandae dolores! Lorem ipsum, dolor sit amet consectetur adipisicing elit. A quod corporis minima voluptas incidunt perspiciatis deleniti! Dolores illum sapiente culpa illo, ex voluptate qui consequuntur esse vero? Quod, molestias amet.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, nulla nostrum sunt magnam consectetur ex placeat tempore, architecto quia porro mollitia quam delectus odio perspiciatis ea tenetur fugiat praesentium voluptatum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate aspernatur reiciendis ducimus quam non neque illum deserunt mollitia ipsam fugiat, quas a fugit! Porro eum libero debitis suscipit ducimus asperiores.
-        </p>
-        <p>
-        Dont hesitate to enquire if you have any questions, my contact details can be found below:
-        </p>
+        <h1>JW Auctions: My E-Commerce/ Auctioning Website</h1>
         <div class = "TwoSidesContainer">
-            <div class = "OneOfTwoSides">
-                wasd
+            <div class = "LeftOfTwoSides">
+                <b>Time Of Completion:</b> 2023<br>
+                <b>Technologies Used:</b> PHP, HTML, CSS, JavaScript, Git/ Bitbucket, Obsidian for documentation, MySQL database
+                <p>
+                    This was my A-Level Computer Science Coursework. Following marking of this coursework, I was told that my coursework was likely the school's highest ever computer science coursework mark.
+                </p>
+                <p>
+                    This is by far my largest non-work-based project, spanning over 12 different page types. On top of this, I made all deadlines and it would be deployable with some more formal unit tests and financial infrastructure integration. However, both of these aspects were outside of the marking criteria.
+                </p>
+                <p>
+                    I was marked for my scripting (JavaScript and PHP), rather than the visual appeal of the website. I acknowledge this area of the website needs more work and I hope to revisit the project soon.
+                </p>
+
             </div>
-            <div class = "OneOfTwoSides">
-                wasd
+            <div class = "RightOfTwoSides">
+                <img src = "Images/JWAuctions.png" width="100%" alt = "A picture of my website">
+                <video width = "100%" controls>
+                    <source src="Videos\Final CS NEA Test Run.mp4" type ="video/mp4"> 
+                </video> 
             </div>
 
         </div>
+        <h1>University of Manchester Computational Thinking Page (Coursework)</h1>
+        <div class = "TwoSidesContainer">
+            <div class = "LeftOfTwoSides">
+                <b>Time Of Completion:</b> 2024<br>
+                <b>Technologies Used:</b> Git/Gitlab, HTML, CSS, JavaScript
+                <p>
+                    This was my A-Level Computer Science Coursework. Following marking of this coursework, I was told that my coursework was likely the school's highest ever computer science coursework mark.
+                </p>
+                <p>
+                    This is by far my largest project, spanning over 12 different page types. On top of this, I made all deadlines and it would be deployable with some more formal unit tests and financial infrastructure integration. However, both of these aspects were outside of the marking criteria.
+                </p>
+                <p>
+                    I was marked for my scripting (JavaScript and PHP), rather than the visual appeal of the website. I acknowledge this area of the website needs more work and I hope to revisit the project soon.
+                </p>
+
+            </div>
+            <div class = "RightOfTwoSides">
+                <img src = "Images/JWAuctions.png" width="100%" alt = "A picture of my website">
+            </div>
+
+        </div>
+        
     </div>
 
 
