Padding between media

--- a/WebProjects.html
+++ b/WebProjects.html
@@ -46,10 +46,13 @@
                 <p>
                     I was marked for my scripting (JavaScript and PHP), rather than the visual appeal of the website. I acknowledge this area of the website needs more work and I hope to revisit the project soon.
                 </p>
+                <p>
+                    Documentation and code available upon legitimate request, if you would like to see feel free to send me an email.
+                </p>
 
             </div>
             <div class = "RightOfTwoSides">
-                <img src = "Images/JWAuctions.png" width="100%" alt = "A picture of my website">
+                <img src = "Images/JWAuctions.png" width="100%" alt = "A picture of my website" style="padding-bottom:2vh;">
                 <video width = "100%" controls>
                     <source src="Videos\Final CS NEA Test Run.mp4" type ="video/mp4"> 
                 </video> 
