Reworked banner images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button onclick="RedirectFunction('OtherExperience.html')"> Other Projects/ Experience </button>
         </div>
     </div>
-    <div class = "banner" style = "background-image:url(Images/Sample\ Banner.png); color:white;"> 
+    <div class = "banner" style = "background-image:url(Images/UoM.jpg); color:white;    text-shadow: 3px 3px 7px rgba(0, 0, 0, 1);"> 
         <!-- Note you need to change background image manually for each page to allow modularity -->
         Landing Page
         
