--- a/index.html
+++ b/index.html
@@ -25,25 +25,35 @@
     </div>
     <div class = "banner" style = "background-image:url(Images/UoM.jpg); color:white;    text-shadow: 3px 3px 7px rgba(0, 0, 0, 1);"> 
         <!-- Note you need to change background image manually for each page to allow modularity -->
+         <!-- Note: The image looks horrendous rework it -->
         Landing Page
         
     </div>
     <div class = "Content">
         <p>
-        Welcome to my Github hosted webpage! By clicking the above images, you will be able to view my projects and you will be able to find some demos/ discussion around each project.
+        Welcome to my Github hosted webpage! By clicking the above tabs, you will be able to view my projects and you will be able to find some demos/ discussion around each project. If you have any questions, please do not hesitate to contact me with my details at the bottom of each page.
         </p>
+        <h3>About me</h3>
+        <div class = "TwoSidesContainer">
+            <div class = "LeftOfTwoSides">
+                <p>
+                    I am currently an undergraduate student at the University of Manchester (2023-2028) studying in Computer Science. Some of my more notable achievements in the field include:
+                    <ul>
+                        <li>Achieving a paid internship the summer following my foundation year studies completing.</li>
+                        <li>Achieving my sixth form's highest every Computer Science A level coursework mark.</li>
+                        <li>A 5-day residential with NCSC aged 17.</li>
+                    </ul>
+                </p>
+            </div>
+            <div class = "RightOfTwoSides">
+                <img src = "Images/PictureOfMe.png" width = "50%">
+            </div>
+        </div>
+
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis corporis, possimus eveniet accusamus delectus deserunt obcaecati saepe dolor ipsam, ex repellat velit optio dolores. Modi iure nesciunt adipisci excepturi earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, incidunt? Fugit, impedit sunt minus laborum porro officia incidunt corrupti! Facilis excepturi nihil in consequuntur adipisci quis dolore iusto accusamus itaque.
+            Alongside studies, I like to engage in watersports and carry out some work as a lifeguard.
         </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem error illum magnam, aliquam alias, odit facere voluptatum libero impedit beatae hic molestias dolor. Aut, beatae cumque accusantium unde repudiandae dolores! Lorem ipsum, dolor sit amet consectetur adipisicing elit. A quod corporis minima voluptas incidunt perspiciatis deleniti! Dolores illum sapiente culpa illo, ex voluptate qui consequuntur esse vero? Quod, molestias amet.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ipsam laudantium vel praesentium placeat similique animi, itaque iure nam dolores tempore nihil eligendi assumenda, mollitia deleniti accusamus voluptates dolore tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, nulla nostrum sunt magnam consectetur ex placeat tempore, architecto quia porro mollitia quam delectus odio perspiciatis ea tenetur fugiat praesentium voluptatum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate aspernatur reiciendis ducimus quam non neque illum deserunt mollitia ipsam fugiat, quas a fugit! Porro eum libero debitis suscipit ducimus asperiores.
-        </p>
-        <p>
-        Dont hesitate to enquire if you have any questions, my contact details can be found below:
-        </p>
+
     </div>
 
 
