Added some content

--- a/WebProjects.html
+++ b/WebProjects.html
@@ -63,20 +63,20 @@
         <div class = "TwoSidesContainer">
             <div class = "LeftOfTwoSides">
                 <b>Time Of Completion:</b> 2024<br>
-                <b>Technologies Used:</b> Git/Gitlab, HTML, CSS, JavaScript
+                <b>Technologies Used:</b> HTML, CSS, JavaScript, LaTeX
                 <p>
-                    This was my A-Level Computer Science Coursework. Following marking of this coursework, I was told that my coursework was likely the school's highest ever computer science coursework mark.
+                    This was my first group project in the world of software and it was completed over the course of roughly 3 weeks. We organised weekly meetings which all 3 members of the team were present for. I took regular lead of the development side of house whilst others found themselves better at designing the website and filling the pages with content.
                 </p>
                 <p>
-                    This is by far my largest project, spanning over 12 different page types. On top of this, I made all deadlines and it would be deployable with some more formal unit tests and financial infrastructure integration. However, both of these aspects were outside of the marking criteria.
+                    I also undertook writing a report document up in LaTex. This is now my go-to for note taking and the report was marked fairly well. We looked carefully into accessibility, ease of use and formatting for focus retention for our users. 
                 </p>
                 <p>
-                    I was marked for my scripting (JavaScript and PHP), rather than the visual appeal of the website. I acknowledge this area of the website needs more work and I hope to revisit the project soon.
+                    We then concluded the project with a presentation. During this presentation, I covered a highly abstracted view of the technical aspects whilst the others discussed design aspects and the group's organisational structure.
                 </p>
 
             </div>
             <div class = "RightOfTwoSides">
-                <img src = "Images/JWAuctions.png" width="100%" alt = "A picture of my website">
+                <img src = "Images/FYProjectHome.png" width="100%" alt = "A picture of my website">
             </div>
 
         </div>
