Trying out a new image for web projects (may change soon)

--- a/WebProjects.html
+++ b/WebProjects.html
@@ -23,14 +23,14 @@
             <button onclick="RedirectFunction('OtherExperience.html')"> Other Projects/ Experience </button>
         </div>
     </div>
-    <div class = "banner" style = "background-image:url(Images/Sample\ Banner.png); color:white;"> 
+    <div class = "banner" style = "background-image:url(Images/BMN.png); color:white;text-shadow: 3px 3px 7px rgba(0, 0, 0, 1);"> 
         <!-- Note you need to change background image manually for each page to allow modularity -->
         Web Projects
-        
     </div>
+    <p style="text-align:right;font-size:8px;">Image by BMN Network on flickr</p>
     <div class = "Content">
         <p>
-        Welcome to my Github hosted webpage! By clicking the above images, you will be able to view my projects and you will be able to find some demos/ discussion around each project.
+
         </p>
         <h1>JW Auctions: My E-Commerce/ Auctioning Website</h1>
         <div class = "TwoSidesContainer">
@@ -54,7 +54,8 @@
             <div class = "RightOfTwoSides">
                 <img src = "Images/JWAuctions.png" width="100%" alt = "A picture of my website" style="padding-bottom:2vh;">
                 <video width = "100%" controls>
-                    <source src="Videos\Final CS NEA Test Run.mp4" type ="video/mp4"> 
+                    <source src="Videos\Final CS NEA Test Run.mp4" type ="video/mp4">
+                    <p>This is a video walkthrough of what the website does and how it works</p> 
                 </video> 
             </div>
 
