--- a/OtherExperience.html
+++ b/OtherExperience.html
@@ -54,10 +54,9 @@
         <div class = "Footer-Column-Container">
             <div class = "Footer-Column">
                 Will.Sigee@gmail.com<br>
-                (+44) 07535446372<br>
             </div>
             <div class = "Footer-Column">
-                <a href="https://www.linkedin.com/in/william-sigee-03089b261/"><img src = "Images/LinkedIn_In_logo.png" style = "width:5%;"></a>
+                <a href="https://www.linkedin.com/in/williamsigee/"><img src = "Images/LinkedIn_In_logo.png" style = "width:5%;"></a>
                 <br><br>
                 <a href="https://github.com/Will1802"><img src = "Images/github-mark.png" style = "width:5%;"></a>
             </div>
