--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <p>
-            Alongside studies, I like to engage in watersports and carry out some work as a lifeguard.
+            Alongside studies, I like to spend time playing watersports and carry out some casual work as a lifeguard.
         </p>
 
     </div>
