brought in a new project

--- a/WebProjects.html
+++ b/WebProjects.html
@@ -30,7 +30,7 @@
     <p style="text-align:right;font-size:10px;">Image by BMN Network on flickr</p>
     <div class = "Content">
         <p>
-
+            As a student, I have been given many opportunities to develop web applications. I have found myself spending most focus on backend (PHP) but am also competent as a front end dev (though I may lack in the creativity aspect of web design). I hope these projects pique your interest! Feel free contact me with any questions or requests for source code. 
         </p>
         <h1>JW Auctions: My E-Commerce/ Auctioning Website</h1>
         <div class = "TwoSidesContainer">
@@ -59,6 +59,23 @@
                 </video> 
             </div>
 
+        </div>
+        <h1>Save Cyber</h1>
+        <div class = "TwoSidesContainer">
+            <div class = "LeftOfTwoSides">
+                <b>Time Of Completion:</b> 2024-2025<br>
+                <b>Technologies Used:</b> PHP, HTML, CSS, JavaScript, Gitlab, Obsidian for documentation, MySQL database, MSMTP, the p5 JavaScript framework, Trello.
+                <p>
+                    As part of my 1st year I worked in a group of 6 to develop a web application over the year. We decided good use of this time was to develop a game that would aim to introduce younger ages to cyber security. 
+                </p>
+                <p>
+                    We decided this was a good idea as demand for the industry is rapidly growing alongside the UK deficit and we found a lack of many easy and interactive resources to start learning.
+                </p>
+
+            </div>
+            <div class = "RightOfTwoSides">
+                Currently a work in progress so no images are available.
+            </div>
         </div>
         <h1>University of Manchester Computational Thinking Page (Coursework)</h1>
         <div class = "TwoSidesContainer">
