Added tkinter game

--- a/OtherExperience.html
+++ b/OtherExperience.html
@@ -59,10 +59,25 @@
         <p>
             This unsurprisingly gave a significant edge considering that the market was not all that logical nor was it realistic however I feel I have learnt alot from this project.
         </p>
-        <br><br>
+        <br>
+        <h1>My Tkinter Game</h1>
+        <p>
+            As part of my university coursework for COMP16321 Intro to Programming 1, I was tasked with developing a game in Tkinter. I decided to go for a 2-Dimensional platform game where a user has to complete levels in the shortest time possible, picking up coins along the way. 
+        </p>
+        <p>
+            Whilst Tkinter is a less than optimal library to develop such a game, I managed to develop 3 levels which worked flawlessly and included:
+            <ul>
+                <li>Leaderboards</li>
+                <li>Collision detection</li>
+                <li>Moving objects and gravity</li>
+                <li>Object-oriented programming</li>
+            </ul>
+        </p>
+        <br>
         <p>
         Dont hesitate to enquire if you have any questions, my contact details can be found below:
-        </p>
+        </p>    
+
     </div>
 
 
