Added clarification of what Tkinter is

--- a/OtherExperience.html
+++ b/OtherExperience.html
@@ -62,7 +62,7 @@
         <br>
         <h1>My Tkinter Game</h1>
         <p>
-            As part of my university coursework for COMP16321 Intro to Programming 1, I was tasked with developing a game in Tkinter. I decided to go for a 2-Dimensional platform game where a user has to complete levels in the shortest time possible, picking up coins along the way. 
+            As part of my university coursework for COMP16321 Intro to Programming 1, I was tasked with developing a game in Tkinter (a Python standard library). I decided to go for a 2-Dimensional platform game where a user has to complete levels in the shortest time possible, picking up coins along the way. 
         </p>
         <p>
             Whilst Tkinter is a less than optimal library to develop such a game, I managed to develop 3 levels which worked flawlessly and included:
