Added save cyber award

--- a/WebProjects.html
+++ b/WebProjects.html
@@ -71,6 +71,9 @@
                 <p>
                     We decided this was a good idea as demand for the industry is rapidly growing alongside the UK deficit and we found a lack of many easy and interactive resources to start learning.
                 </p>
+                <p>
+                    We were given one of 3 awards in the whole first year following the presentation of our idea through a poster. This was voted on by the whole year and lectureres. Following this award, I gave a speech to 200+ people.
+                </p>
 
             </div>
             <div class = "RightOfTwoSides">
